--- a/src/less/repos/loader.less
+++ b/src/less/repos/loader.less
@@ -1,1 +1,3 @@
+@import 'bs3-main-navigation/bs3-main-navigation';
+@import 'bs3-simple-navigation/bs3-simple-navigation';
 @import 'bs3-sidebar/bs3-sidebar';
