Use new modernizr standards

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -245,14 +245,14 @@
 }
 
 // Touch
-.touch {
+.touchevents {
 
 	// Navigation
 	.sidebar-navigation {}
 }
 
 // No touch
-.no-touch {
+.no-touchevents {
 
 	// Navigation
 	.sidebar-navigation {
