Add border box property to sidebar

--- a/less/structure.less
+++ b/less/structure.less
@@ -27,6 +27,7 @@
 	bottom: 0;
 	padding-right: @bs3-sidebar-scrollbar-width;
 	background-color: @bs3-sidebar-background-color;
+	.box-sizing(border-box);
 
 	&::-webkit-scrollbar {
 		display: none;
